main/002_external_dns.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: main
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: account-for-external-dns
      containers:
      - name: external-dns
        image: k8s.gcr.io/external-dns/external-dns:v0.12.0
        args:
        - --source=ingress
        - --source=service
        - --domain-filter=mycdk-app-example.tk
        # - --annotation-filter="main-ingress"
        - --provider=aws
        - --policy=sync
        - --aws-zone-type=public
        - --registry=txt
        - --txt-owner-id=eks-cluster
      securityContext:
        fsGroup: 65534
